# ECS

./: LICENSE.md  README.md
Ecs/: Archetype.h  ArchetypeA.cpp  ArchetypeA.h  ArchetypeB.cpp  ArchetypeB.h  ArchetypeC.cpp  ArchetypeC.h  CMakeLists.txt  ComponentA.cpp  ComponentA.h  ComponentB.cpp  ComponentB.h  ComponentC.cpp  ComponentC.h  ContainerClass.h  Entity.cpp  Entity.h  EntityAction.cpp  EntityAction.h  EntityActionManager.cpp  EntityActionManager.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  main.cpp  main.h
